--- a/index.html
+++ b/index.html
@@ -10,61 +10,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600;700&family=Open+Sans:wght@300;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
-    <!--<header class="bg-header-container">
-        <div class="container">
-            <div class="nav-area">
-                <div class="logo"><img src="images/logo-white-1x.png" alt=""></div>
-                <nav class="menu">
-                    <ul>
-                        <li><a href="">Home</a></li>
-                        <li><a href="">About</a></li>
-                        <li><a href="">Features</a></li>
-                        <li><a href="">Pricing</a></li>
-                        <li><a href="">Screenshots</a></li>
-                        <li><a href="">Pages</a></li>
-                        <li><a href="">Blog</a></li>
-                        <li><a href="">Team</a></li>
-                        <li><a href="">Contact</a></li>
-                    </ul>
-                </nav>
-            </div>
-
-            <div class="header-headline">
-                <div class="container container-grid">
-                    <div class="section-first-headline">
-                        <h1>
-                            Brainstorming for Desired Usability
-                        </h1>
-                        <h2>Our design projects are fresh and simple and will benefit your business greatly. Learn more about our work!</h2>
-                        <form class="form-headline">
-                            <label for="email"></label>
-                            <input type="email" id="email" placeholder="info@yourdomain.com">
-                            <button>Subscribe</button>
-                        </form>
-                        <div class="call-action-video-headline">
-                            <a href="">
-                                <div class="btn-video">
-                                    <img src="images/control-play.png" alt="">
-                                </div>
-                            </a>
-                            <div class="call-action-video-headline-desc">Watch Video Overview</div>
-                        </div>
-                    </div>
-                    <div class="section-first-image">
-                        <img src="images/app-product.png" alt="">
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="header-bg">
-            <img src="images/hero-bg-shape-1.svg" alt="">
-        </div>
-    </header>-->
+<body>0
    <header>
        <div class="container bg-header">
            <div class="header-frontline">
-               <div class="logo"><img src="images/logo-white-1x.png" alt=""></div>
+               <div class="logo"><a href=""><img src="images/logo-white-1x.png" alt=""></a></div>
                <nav class="menu">
                 <ul>
                     <li><a href="">Home</a></li>
@@ -77,7 +27,7 @@
                     <li><a href="">Team</a></li>
                     <li><a href="">Contact</a></li>
                 </ul>
-                <div class="menu-opener" onclick="abrirMenu()">
+                <div class="menu-opener">
                     <img src="images/menu.png" alt="">
                 </div>
                </nav>
