update filles on update branch

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-   <header>
+   <!--<header>
        <div class="container bg-header">
            <div class="header-frontline">
                <div class="logo"><a href=""><img src="images/logo-white-1x.png" alt=""></a></div>
@@ -73,7 +73,58 @@
        <div class="header-bg-bottom">
             <img src="images/hero-bg-shape-1.svg" alt="">
         </div>
-   </header>
+   </header>-->
+   <header class="bg-header">
+       <div class="headerArea">
+           <div class="container-headerArea">
+                <div class="logo"><img src="images/logo-white-1x.png" alt=""></div>
+                <nav class="menu">
+                    <a href="">Home</a>
+                    <a href="">About</a>
+                    <a href="">Features</a>
+                    <a href="">Princing</a>
+                    <a href="">Screenshots</a>
+                    <a href="">Pages</a>
+                    <a href="">Blog</a>
+                    <a href="">Team</a>
+                    <a href="">Contact</a>
+                </nav>
+                <div class="menuToggle">
+                    <img src="images/menu.png" alt="">
+                </div>
+            </div>
+       </div>
+
+       <section class="headline container">
+            <div class="first-headline">
+                <h1>
+                    Brainstorming for Desired Usability
+                </h1>
+                <h2>Our design projects are fresh and simple and will benefit your business greatly. Learn more about our work!</h2>
+                <form class="form-headline">
+                    <label for="email"></label>
+                    <input type="email" id="email" placeholder="info@yourdomain.com">
+                    <button>Subscribe</button>
+                </form>
+                <div class="call-action-video-headline">
+                    <a href="">
+                        <div class="btn-video">
+                            <img src="images/control-play.png" alt="">
+                        </div>
+                    </a>
+                    <div class="call-action-video-headline-desc">Watch Video Overview</div>
+                </div>
+            </div>
+            <div class="second-headline">
+                <img src="images/app-product.png" alt="">
+            </div>
+            
+       </section>
+       <div class="header-bg-bottom">
+            <img src="images/hero-bg-shape-1.svg" alt="">
+        </div>
+
+    </header>
 
 <script src="js/script.js"></script>
 </body>
