--- a/index.html
+++ b/index.html
@@ -90,9 +90,22 @@
                     <a href="">Contact</a>
                 </nav>
                 <div class="menuToggle">
-                    <img src="images/menu.png" alt="">
+                    <img src="images/menu-white.png" alt="">
                 </div>
             </div>
+
+            <div class="menuMobile menu-hide">
+                <a href="">Home</a>
+                <a href="">About</a>
+                <a href="">Features</a>
+                <a href="">Princing</a>
+                <a href="">Screenshots</a>
+                <a href="">Pages</a>
+                <a href="">Blog</a>
+                <a href="">Team</a>
+                <a href="">Contact</a>
+            </div>
+
        </div>
 
        <section class="headline container">
