update section area2

--- a/index.html
+++ b/index.html
@@ -139,6 +139,32 @@
 
     </header>
 
+    <section class="first-area container">
+
+        <div class="firt-area-headline">
+            <h2>Why Peoples Love AppCo?</h2>
+            <h3>Following reasons show advantages of adding AppCo to your lead pages, demos and checkouts evisculate interoperable imperatives rather.</h3>
+            <div class="features-box-area">
+                <div class="feature-boxes">
+                    <img src="images/promo-icon-bg.svg" alt="">
+                    <p class="txt-bold">Clean Design</p>
+                    <p class="txt-desc">Increase sales by showing true dynamics of your website.</p>
+                </div>
+                <div class="feature-boxes">
+                    <img src="images/promo-icon-bg.svg" alt="">
+                    <p class="txt-bold">Secure Data</p>
+                    <p class="txt-desc">Build your online store’s trust using Social Proof & Urgency.</p>
+                </div>
+                <div class="feature-boxes">
+                    <img src="images/promo-icon-bg.svg" alt="">
+                    <p class="txt-bold">Retina Ready</p>
+                    <p class="txt-desc">Realize importance of social proof in customer’s purchase decision.</p>
+                </div>
+            </div>
+        </div>
+
+    </section>
+
 <script src="js/script.js"></script>
 </body>
 </html>
