update second-area and third-area

--- a/index.html
+++ b/index.html
@@ -102,6 +102,65 @@
 
     </section>
 
+    <section class="second-area container">
+
+        <div class="box-second-area-left">
+            <h2>Use Your Andoid or ios Device to Manage Everything</h2>
+            <div class="second-area-features">
+                <div class="features">
+                    <img src="images/image-icon-1.png" alt="">
+                    <div class="feature-desc">
+                        Proactively syndicate open-source e-markets after low-risk high-yield synergy. Professionally simplify visionary technology.
+                    </div>
+                </div>
+                <div class="features">
+                    <img src="images/image-icon-2.png" alt="">
+                    <div class="feature-desc">
+                        Intrinsicly aggregate cutting-edge internal or "organic" sources through pandemic manufactured products. Synergistically.
+                    </div>
+                </div>
+                <div class="features">
+                    <img src="images/image-icon-3.png" alt="">
+                    <div class="feature-desc">
+                        Completely administrate empowered e-tailers after extensive experiences. Holisticly leverage existing quality networks.
+                    </div>
+                </div>
+                <div class="features">
+                    <img src="images/image-icon-4.png" alt="">
+                    <div class="feature-desc">
+                        Intrinsicly incentivize functionalized metrics whereas go forward networks. Collaboratively fabricate clicks-and-mortar intellectual.
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="box-second-area-right">
+            <img src="images/image-11.png" alt="">
+        </div>
+
+    </section>
+
+    <section class="third-area container">
+
+        <div class="box-third-area-left">
+            <img src="images/image-14.png" alt="">
+        </div>
+        <div class="box-third-area-right">
+            <h2>Share your Photos with Friends Easily</h2>
+            <p>Objectively deliver professional value with diverse web-readiness. Collaboratively transition wireless customer service without goal-oriented catalysts for change. Collaboratively.</p><br/>
+            <p>Uniquely simplify sustainable applications whereas adaptive schemas. Competently brand performance based content and.</p>
+            <div class="third-area-icons">
+                <ul>
+                    <li><img src="images/image-icon-2.png" alt=""></li>
+                    <li><img src="images/image-icon-3.png" alt=""></li>
+                    <li><img src="images/image-icon-4.png" alt=""></li>
+                    <li><img src="images/image-icon-1.png" alt=""></li>
+                </ul>
+            </div>
+        </div>
+
+    </section>
+
 <script src="js/script.js"></script>
 </body>
 </html>
