--- a/index.html
+++ b/index.html
@@ -161,6 +161,156 @@
 
     </section>
 
+    <section class="download-area bg-download-area">
+        <div class="container-inside">
+            <div class="download-area-left">
+                <h2>
+                    Start Managing your Apps Business, more Faster
+                </h2>
+                <p>Objectively deliver professional value with diverse web-readiness. Collaboratively transition wireless customer service without goal-oriented catalysts for change. Collaboratively.</p>
+                <div class="download-buttons">
+                    <button class="btn-google">Google Play</button>
+                    <button class="btn-apple">App Store</button>
+                </div>
+            </div>
+            <div class="download-area-right">
+                <img src="images/app-hand-top.png" alt="">
+            </div>
+        </div>
+    </section>
+
+    <section class="price-area container">
+
+        <h2>
+            Affordable Pricing and Packages
+            Choose your Best One
+        </h2>
+        <p>
+            Distinctively brand cutting-edge imperatives through synergistic infrastructures customize low-risk high-yield processes rather than user friendly.
+        </p>
+        <div class="prices-area">
+            <div class="price-basic">
+                <div class="price-name">
+                    Basic
+                </div>
+                <img src="images/basic.svg" alt="">
+                <div class="price-features">
+                    <ul>
+                        <li>5 Users access same time</li>
+                        <li>Integrated eCommerce</li>
+                        <li>Customization interface</li>
+                        <li>Weekly updated</li>
+                        <li>24/7 Phone Support</li>
+                        <li>Event Analytics</li>
+                    </ul>
+                </div>
+                <div class="price-value">
+                    $<span>29</span>
+                </div>
+                <button class="btn-prices">Purchase now</button>
+            </div>
+            <div class="price-standard">
+                <div class="price-name">
+                    Standard
+                </div>
+                <img src="images/standard.svg" alt="">
+                <div class="price-features">
+                    <ul>
+                        <li>10 Users access same time</li>
+                        <li>Integrated eCommerce</li>
+                        <li>Customization interface</li>
+                        <li>Daily updated</li>
+                        <li>24/7 Phone Support</li>
+                        <li>Event Analytics</li>
+                    </ul>
+                </div>
+                <div class="price-value">
+                    $<span>145</span>
+                </div>
+                <button class="btn-prices btn-selected">Purchase now</button>
+            </div>
+            <div class="price-unlimited">
+                <div class="price-name">
+                    Unlimited
+                </div>
+                <img src="images/unlimited.svg" alt="">
+                <div class="price-features">
+                    <ul>
+                        <li>20 Users access same time</li>
+                        <li>Integrated eCommerce</li>
+                        <li>Fully Customization interface</li>
+                        <li>Free updated</li>
+                        <li>24/7 Phone Support</li>
+                        <li>Event Analytics</li>
+                    </ul>
+                </div>
+                <div class="price-value">
+                    $<span>249</span>
+                </div>
+                <button class="btn-prices">Purchase now</button>
+            </div>
+        </div>
+        <div class="price-area-info">
+            If you need custom services or Need more? <a href="">Contact us</a> 
+        </div>
+
+    </section>
+
+    <section class="area-info container">
+
+        <div class="questions-list">
+            <div class="questions">
+                <div class="question">
+                    <h6>Which license do I need?</h6>
+                </div>
+                <div class="answer">
+                    Uniquely leverage other's distinctive infomediaries rather than leveraged supply chains. Continually seize distributed collaboration and idea-sharing whereas user.
+                </div>
+            </div>
+            <div class="questions">
+                <div class="question">
+                    <h6>Which license do I need?</h6>
+                </div>
+                <div class="answer">
+                    Uniquely leverage other's distinctive infomediaries rather than leveraged supply chains. Continually seize distributed collaboration and idea-sharing whereas user.
+                </div>
+            </div>
+            <div class="questions">
+                <div class="question">
+                    <h6>How do I get access to a theme?</h6>
+                </div>
+                <div class="answer">
+                    Rapidiously incentivize virtual e-commerce and exceptional e-tailers. Progressively network focused catalysts for change without orthogonal benefits. Dramatically empower.
+                </div>
+            </div>
+            <div class="questions">
+                <div class="question">
+                    <h6>How do I get access to a theme?</h6>
+                </div>
+                <div class="answer">
+                    Rapidiously incentivize virtual e-commerce and exceptional e-tailers. Progressively network focused catalysts for change without orthogonal benefits. Dramatically empower.
+                </div>
+            </div>
+            <div class="questions">
+                <div class="question">
+                    <h6>How do I see previous orders?</h6>
+                </div>
+                <div class="answer">
+                    Proactively monetize long-term high-impact innovation and scalable relationships. Dynamically mesh principle-centered functionalities before next-generation best practices. Distinctively empower.
+                </div>
+            </div>
+            <div class="questions">
+                <div class="question">
+                    <h6>How do I see previous orders?</h6>
+                </div>
+                <div class="answer">
+                    Proactively monetize long-term high-impact innovation and scalable relationships. Dynamically mesh principle-centered functionalities before next-generation best practices. Distinctively empower.
+                </div>
+            </div>
+        </div>
+
+    </section>
+
 <script src="js/script.js"></script>
 </body>
 </html>
