update index and css files

--- a/index.html
+++ b/index.html
@@ -475,6 +475,48 @@
 
     </section>
 
+    <section class="contact-area">
+
+        <div class="content-inside-contact">
+
+            <div class="contact-area-left">
+                <h2>Contact With Us</h2>
+                <p>It's very easy to get in touch with us. Just use the contact form or pay us a visit for a coffee at the office. Dynamically innovate competitive technology after an expanded array of leadership.</p>
+                <p>Head Office<br/>
+                121 King St, Melbourne VIC 3000, Australia</p>
+                <p>
+                Phone: +61 2 8376 6284<br/>
+                Email : <a href="">hello@yourdomain.com</a>
+                </p>
+            </div>
+            <div class="contact-area-right">
+                <h4>Reach us Quickly</h4>
+                <form action="">
+                    <div class="formName">
+                        <input type="text" name="name" id="name" placeholder="Enter name">
+                    </div>
+                    <div class="formEmail">
+                        <input type="email" name="email2" id="email2" placeholder="Enter email">
+                    </div>
+                    <div class="formPhone">
+                        <input type="tel" name="phone" id="phone" placeholder="Your Phone">
+                    </div>
+                    <div class="formCompany">
+                        <input type="text" name="company" id="company" placeholder="Your Company">
+                    </div>
+                    <div class="formMessage">
+                        <textarea name="message" id="message" placeholder="Message" rows="10"></textarea>
+                    </div>
+                    <div class="formSend">
+                        <input type="submit" value="Send Message" id="btn-send">
+                    </div>
+                </form>
+            </div>
+
+        </div>
+
+    </section>
+
 <script src="js/script.js"></script>
 </body>
 </html>
