update index, css and js files

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 <body>
     <div class="bg-modal">
         <div class="modal">
-            <span class="close" onclick="fecharModal()">&times;</span>
+            <span class="close">&times;</span>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/EJQjd6CiO9s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
     </div>
    <header class="bg-header">
@@ -64,7 +65,7 @@
                 <div class="call-action-video-headline">
                     <a href="">
                         <div class="btn-video">
-                            <img src="images/control-play.png" alt="">
+                            <img src="images/control-play-blue.png" alt="">
                         </div>
                     </a>
                     <div class="call-action-video-headline-desc">Watch Video Overview</div>
@@ -180,8 +181,8 @@
                 </h2>
                 <p>Objectively deliver professional value with diverse web-readiness. Collaboratively transition wireless customer service without goal-oriented catalysts for change. Collaboratively.</p>
                 <div class="download-buttons">
-                    <button class="btn-google">Google Play</button>
-                    <button class="btn-apple">App Store</button>
+                    <button class="btn-google"><i class="fab fa-android"></i>Google Play</button>
+                    <button class="btn-apple"><i class="fab fa-apple"></i>App Store</button>
                 </div>
             </div>
             <div class="download-area-right">
@@ -272,7 +273,8 @@
         <div class="questions-list">
             <div class="questions">
                 <div class="question">
-                    <h6>Which license do I need?</h6>
+                    <h6><i class="far fa-file-alt"></i> Which license do I need?</h6>
+                    <span class="plus"><i class="fas fa-plus"></i></span>
                 </div>
                 <div class="answer">
                     Uniquely leverage other's distinctive infomediaries rather than leveraged supply chains. Continually seize distributed collaboration and idea-sharing whereas user.
@@ -280,7 +282,8 @@
             </div>
             <div class="questions">
                 <div class="question">
-                    <h6>Which license do I need?</h6>
+                    <h6><i class="far fa-file-alt"></i> Which license do I need?</h6>
+                    <span class="plus"><i class="fas fa-plus"></i></span>
                 </div>
                 <div class="answer">
                     Uniquely leverage other's distinctive infomediaries rather than leveraged supply chains. Continually seize distributed collaboration and idea-sharing whereas user.
@@ -288,7 +291,8 @@
             </div>
             <div class="questions">
                 <div class="question">
-                    <h6>How do I get access to a theme?</h6>
+                    <h6><i class="far fa-images"></i> How do I get access to a theme?</h6>
+                    <span class="plus"><i class="fas fa-plus"></i></span>
                 </div>
                 <div class="answer">
                     Rapidiously incentivize virtual e-commerce and exceptional e-tailers. Progressively network focused catalysts for change without orthogonal benefits. Dramatically empower.
@@ -296,7 +300,8 @@
             </div>
             <div class="questions">
                 <div class="question">
-                    <h6>How do I get access to a theme?</h6>
+                    <h6><i class="fas fa-unlock-alt"></i> How do I get access to a theme?</h6>
+                    <span class="plus"><i class="fas fa-plus"></i></span>
                 </div>
                 <div class="answer">
                     Rapidiously incentivize virtual e-commerce and exceptional e-tailers. Progressively network focused catalysts for change without orthogonal benefits. Dramatically empower.
@@ -304,7 +309,8 @@
             </div>
             <div class="questions">
                 <div class="question">
-                    <h6>How do I see previous orders?</h6>
+                    <h6><i class="fas fa-mail-bulk"></i> How do I see previous orders?</h6>
+                    <span class="plus"><i class="fas fa-plus"></i></span>
                 </div>
                 <div class="answer">
                     Proactively monetize long-term high-impact innovation and scalable relationships. Dynamically mesh principle-centered functionalities before next-generation best practices. Distinctively empower.
@@ -312,7 +318,8 @@
             </div>
             <div class="questions">
                 <div class="question">
-                    <h6>How do I see previous orders?</h6>
+                    <h6><i class="fas fa-cog"></i> How do I see previous orders?</h6>
+                    <span class="plus"><i class="fas fa-plus"></i></span>
                 </div>
                 <div class="answer">
                     Proactively monetize long-term high-impact innovation and scalable relationships. Dynamically mesh principle-centered functionalities before next-generation best practices. Distinctively empower.
@@ -364,11 +371,9 @@
 
         <div class="container-inside main-video-area">
             <div class="main-video-player">
-                <a href="">
-                    <div class="btn-video" onclick="abrirModal()">
+                    <div class="btn-video">
                         <img src="images/control-play-blue.png" alt="">
                     </div>
-                </a>
                 <div class="call-action-video-headline-desc">Watch Video Overview</div>
             </div>
         </div>
@@ -387,7 +392,12 @@
                         <h3>Eder Mason</h3>
                         <p>Senior Designer</p>
                         <div class="team-social">
-                            ...
+                            <ul>
+                                <li><a href=""><i class="fab fa-facebook-f"></i></a></li>
+                                <li><a href=""><i class="fab fa-twitter"></i></a></li>
+                                <li><a href=""><i class="fab fa-github-alt"></i></a></li>
+                                <li><a href=""><i class="fab fa-instagram"></i></a></li>
+                            </ul>
                         </div>
                     </div>
                 </li>
@@ -397,7 +407,12 @@
                         <h3>Eder Mason</h3>
                         <p>Senior Designer</p>
                         <div class="team-social">
-                            ...
+                            <ul>
+                                <li><a href=""><i class="fab fa-facebook-f"></i></a></li>
+                                <li><a href=""><i class="fab fa-twitter"></i></a></li>
+                                <li><a href=""><i class="fab fa-github-alt"></i></a></li>
+                                <li><a href=""><i class="fab fa-instagram"></i></a></li>
+                            </ul>
                         </div>
                     </div>
                 </li>
@@ -407,7 +422,12 @@
                         <h3>Eder Mason</h3>
                         <p>Senior Designer</p>
                         <div class="team-social">
-                            ...
+                            <ul>
+                                <li><a href=""><i class="fab fa-facebook-f"></i></a></li>
+                                <li><a href=""><i class="fab fa-twitter"></i></a></li>
+                                <li><a href=""><i class="fab fa-github-alt"></i></a></li>
+                                <li><a href=""><i class="fab fa-instagram"></i></a></li>
+                            </ul>
                         </div>
                     </div>
                 </li>
@@ -417,7 +437,12 @@
                         <h3>Edna Mason</h3>
                         <p>Senior Designer</p>
                         <div class="team-social">
-                            ...
+                            <ul>
+                                <li><a href=""><i class="fab fa-facebook-f"></i></a></li>
+                                <li><a href=""><i class="fab fa-twitter"></i></a></li>
+                                <li><a href=""><i class="fab fa-github-alt"></i></a></li>
+                                <li><a href=""><i class="fab fa-instagram"></i></a></li>
+                            </ul>
                         </div>
                     </div>
                 </li>
@@ -566,7 +591,12 @@
                 <img src="images/logo-white-1x.png" alt="">
                 <p>Holisticly empower premium architectures without value-added ideas. Seamlessly evolve cross-platform experiences.</p>
                 <div class="footer-icons">
-                    ...
+                    <ul>
+                        <li><a href=""><i class="fab fa-facebook-f"></i></a></li>
+                        <li><a href=""><i class="fab fa-twitter"></i></a></li>
+                        <li><a href=""><i class="fab fa-github-alt"></i></a></li>
+                        <li><a href=""><i class="fab fa-instagram"></i></a></li>
+                    </ul>
                 </div>
             </div>
             <div class="footer-area2">
