Update all files

--- a/index.html
+++ b/index.html
@@ -622,20 +622,20 @@
             <div class="footer-area4">
                 <h3>Location</h3>
                 <div class="adreess">
-                    <div class="icon"></div>
+                    <div class="icon"><i class="fas fa-map-marker-alt"></i></div>
                     <div class="desc-adreess">
                         <p>121 King Melbourne</p>
                         <p>Australia 30000</p>
                     </div>
                 </div>
                 <div class="phone">
-                    <p>+61 2 8376 6284</p>
+                    <p><i class="fas fa-phone"></i>  +61 2 8376 6284</p>
                 </div>
                 <div class="email">
-                    <p>mail@example.com</p>
+                    <p><i class="far fa-envelope"></i>  mail@example.com</p>
                 </div>
                 <div class="url">
-                    www.yourdomain.com
+                    <p><i class="fas fa-link"></i>  www.yourdomain.com</p>
                 </div>
             </div>
         </div>
