--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 <body>
     <div class="bg-modal">
         <div class="modal">
-            <span class="close">&times;</span>
+            <div class="close">&times;</div>
             <div class="embed">
-                <!--<iframe width="560" height="315" src="https://www.youtube.com/embed/EJQjd6CiO9s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>-->
-                <iframe src="https://www.youtube.com/embed/EJQjd6CiO9s"></iframe>
+                <!--<iframe width="560" height="315" src="https://www.youtube.com/embed/EJQjd6CiO9s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe src="https://www.youtube.com/embed/EJQjd6CiO9s"></iframe>-->
             </div>       
         </div>
     </div>
