--- a/index.html
+++ b/index.html
@@ -343,26 +343,102 @@
             </div>
         </div>
         <div class="clients-area-right">
-            <div class="testemonial-area">
-                <div class="client-header">
-                    <img src="images/client-1.jpg" alt="">
-                    <div class="clients-info">
-                        <div class="clients-name">
-                            John Charles
-                        </div>
-                        <div class="clients-company">
-                            Google
+            <div class="clients">
+
+                <input type="radio" name="radio-btn" id="radio1">
+                <input type="radio" name="radio-btn" id="radio2">
+                <input type="radio" name="radio-btn" id="radio3">
+                <input type="radio" name="radio-btn" id="radio4">
+                
+                <div class="testimonial-area first">
+                    <div class="client-header">
+                        <img src="images/client-1.jpg" alt="Client 1">
+                        <div class="clients-info">
+                            <div class="clients-name">
+                                John Charles
+                            </div>
+                            <div class="clients-company">
+                                Google
+                            </div>
                         </div>
                     </div>
+                    <div class="clients-testemonial">
+                        <img src="images/quote.png" alt="Client 1"> Interactively optimize fully researched expertise vis-a-vis plug-and-play relationships. Intrinsicly develop viral core competencies for fully tested customer service. Enthusiastically create next-generation growth strategies and.
+                    </div>
                 </div>
-                <div class="clients-testemonial">
-                    <img src="images/quote.png" alt=""> Interactively optimize fully researched expertise vis-a-vis plug-and-play relationships. Intrinsicly develop viral core competencies for fully tested customer service. Enthusiastically create next-generation growth strategies and.
+
+                <div class="testimonial-area">
+                    <div class="client-header">
+                        <img src="images/client-2.jpg" alt="Client 2">
+                        <div class="clients-info">
+                            <div class="clients-name">
+                                Arabella Ora
+                            </div>
+                            <div class="clients-company">
+                                Amazon
+                            </div>
+                        </div>
+                    </div>
+                    <div class="clients-testemonial">
+                        <img src="images/quote.png" alt="Client 2"> Rapidiously develop user friendly growth strategies after extensive initiatives. Conveniently grow innovative benefits through fully tested deliverables. Rapidiously utilize focused platforms through end-to-end schemas.
+                    </div>
                 </div>
+
+                <div class="testimonial-area">
+                    <div class="client-header">
+                        <img src="images/client-3.jpg" alt="Client 3">
+                        <div class="clients-info">
+                            <div class="clients-name">
+                                Anna Moroe
+                            </div>
+                            <div class="clients-company">
+                                Airbnb
+                            </div>
+                        </div>
+                    </div>
+                    <div class="clients-testemonial">
+                        <img src="images/quote.png" alt="Client 3"> Objectively synthesize client-centered e-tailers for maintainable channels. Energistically monetize reliable imperatives through client-centric best practices. Collaboratively.
+                    </div>
+                </div>
+
+                <div class="testimonial-area">
+                    <div class="client-header">
+                        <img src="images/client-4.jpg" alt="Client 4">
+                        <div class="clients-info">
+                            <div class="clients-name">
+                                Maria Jolie
+                            </div>
+                            <div class="clients-company">
+                                PayPal
+                            </div>
+                        </div>
+                    </div>
+                    <div class="clients-testemonial">
+                        <img src="images/quote.png" alt="Client 4"> Rapidiously develop user friendly growth strategies after extensive initiatives. Conveniently grow innovative benefits through fully tested deliverables. Rapidiously utilize focused platforms through end-to-end schemas.
+                    </div>
+                </div>
+
+
+                <div class="auto-navigation">
+                    <div class="btn-auto1"></div>
+                    <div class="btn-auto2"></div>
+                    <div class="btn-auto3"></div>
+                    <div class="btn-auto4"></div>
+                </div>
+
+                <!-- <div class="arrows">
+                    <button class="arrow-prev"><</button>
+                    <button class="arrow-next">></button>
+                </div> -->
             </div>
-            <div class="arrows">
-                <button class="arrow-prev"><</button>
-                <button class="arrow-next">></button>
+
+            <div class="manual-navigation">
+                <label for="radio1" class="btn-manual"></label>
+                <label for="radio2" class="btn-manual"></label>
+                <label for="radio3" class="btn-manual"></label>
+                <label for="radio4" class="btn-manual"></label>
             </div>
+
         </div>
 
     </section>
@@ -404,8 +480,8 @@
                 <li>
                     <img src="images/team-1.jpg" alt="">
                     <div class="team-info">
-                        <h3>Eder Mason</h3>
-                        <p>Senior Designer</p>
+                        <h3>Marco Saints</h3>
+                        <p>Senior Backend</p>
                         <div class="team-social">
                             <ul>
                                 <li><a href=""><i class="fab fa-facebook-f"></i></a></li>
@@ -419,8 +495,8 @@
                 <li>
                     <img src="images/team-2.jpg" alt="">
                     <div class="team-info">
-                        <h3>Eder Mason</h3>
-                        <p>Senior Designer</p>
+                        <h3>Sammuel Uchoa</h3>
+                        <p>Senior Frontend</p>
                         <div class="team-social">
                             <ul>
                                 <li><a href=""><i class="fab fa-facebook-f"></i></a></li>
@@ -434,8 +510,8 @@
                 <li>
                     <img src="images/team-3.jpg" alt="">
                     <div class="team-info">
-                        <h3>Edna Mason</h3>
-                        <p>Senior Designer</p>
+                        <h3>Jenny Lopez</h3>
+                        <p>Senior UI/UX</p>
                         <div class="team-social">
                             <ul>
                                 <li><a href=""><i class="fab fa-facebook-f"></i></a></li>
@@ -643,7 +719,7 @@
         <section class="footer-copy">
             <div class="container">
                 <div class="copy">
-                    &copy; Desenvolvido por Marco Luciano
+                    &copy; Desenvolvido por <a href="https://www.marcoluciano.dev" target="_blank">Marco Luciano</a>
                 </div>
                 <div class="footer-links">
                     <ul>
