Update menu items

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Clone Template Appco</title>
+    <title>Template Appco</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600;700&family=Open+Sans:wght@300;400&display=swap" rel="stylesheet">
@@ -23,15 +23,14 @@
            <div class="container-headerArea">
                 <div class="logo"><img src="images/logo-white-1x.png" alt=""></div>
                 <nav class="menu">
-                    <a href="">Home</a>
-                    <a href="">About</a>
-                    <a href="">Features</a>
-                    <a href="">Princing</a>
-                    <a href="">Screenshots</a>
-                    <a href="">Pages</a>
-                    <a href="">Blog</a>
-                    <a href="">Team</a>
-                    <a href="">Contact</a>
+                    <a href="/">Home</a>
+                    <a href="#about">About</a>
+                    <a href="#features">Features</a>
+                    <a href="#download">Download</a>
+                    <a href="#prices">Princing</a>
+                    <a href="#blog">Blog</a>
+                    <a href="#team">Team</a>
+                    <a href="#contact">Contact</a>
                 </nav>
                 <div class="menuToggle">
                     <img src="images/menu-white.png" alt="">
@@ -39,15 +38,14 @@
             </div>
 
             <div class="menuMobile menu-hide">
-                <a href="">Home</a>
-                <a href="">About</a>
-                <a href="">Features</a>
-                <a href="">Princing</a>
-                <a href="">Screenshots</a>
-                <a href="">Pages</a>
-                <a href="">Blog</a>
-                <a href="">Team</a>
-                <a href="">Contact</a>
+                <a href="/">Home</a>
+                <a href="#about">About</a>
+                <a href="#features">Features</a>
+                <a href="#download">Download</a>
+                <a href="#prices">Princing</a>
+                <a href="#blog">Blog</a>
+                <a href="#team">Team</a>
+                <a href="#contact">Contact</a>
             </div>
 
        </div>
@@ -84,7 +82,7 @@
 
     <section class="first-area container">
 
-        <div class="firt-area-headline">
+        <div class="firt-area-headline" id="about">
             <h2>Why Peoples Love AppCo?</h2>
             <h3>Following reasons show advantages of adding AppCo to your lead pages, demos and checkouts evisculate interoperable imperatives rather.</h3>
             <div class="features-box-area">
@@ -116,7 +114,7 @@
 
     <section class="second-area container">
 
-        <div class="box-second-area-left">
+        <div class="box-second-area-left" id="features">
             <h2>Use Your Andoid or ios Device to Manage Everything</h2>
             <div class="second-area-features">
                 <div class="features">
@@ -173,7 +171,7 @@
 
     </section>
 
-    <section class="download-area bg-download-area">
+    <section class="download-area bg-download-area" id="download">
         <div class="container-inside">
             <div class="download-area-left">
                 <h2>
@@ -191,7 +189,7 @@
         </div>
     </section>
 
-    <section class="price-area container">
+    <section class="price-area container" id="prices">
 
         <h2>
             Affordable Pricing and Packages
@@ -456,7 +454,7 @@
 
     </section>
 
-    <section class="our-team-area container">
+    <section class="our-team-area container" id="team">
 
         <h2>Our Team Members</h2>
         <p>Following reasons show advantages of adding AppCo to your lead pages, foster market positioning products without demos and checkouts. </p>
@@ -527,7 +525,7 @@
 
     </section>
 
-    <section class="news-area container">
+    <section class="news-area container" id="blog">
 
         <h2>Our Latest News</h2>
         <p>Enthusiastically drive revolutionary opportunities before emerging leadership. <br/>Distinctively transform tactical methods of resource sucking core.</p>
@@ -587,7 +585,7 @@
 
     </section>
 
-    <section class="contact-area">
+    <section class="contact-area" id="contact">
 
         <div class="content-inside-contact">
 
