--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
            <div class="container-headerArea">
                 <div class="logo"><img src="images/logo-white-1x.png" alt=""></div>
                 <nav class="menu">
-                    <a href="/">Home</a>
+                    <a href="#">Home</a>
                     <a href="#about">About</a>
                     <a href="#features">Features</a>
                     <a href="#download">Download</a>
@@ -38,7 +38,7 @@
             </div>
 
             <div class="menuMobile menu-hide">
-                <a href="/">Home</a>
+                <a href="#">Home</a>
                 <a href="#about">About</a>
                 <a href="#features">Features</a>
                 <a href="#download">Download</a>
